drag and drop para los botones de los partidos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Pactómetro</title>
+    <link href="css/jquery-ui.structure.css" rel="stylesheet" />
+    <link href="css/jquery-ui.theme.css" rel="stylesheet" />
     <link href="css/estilos.css" rel="stylesheet" />
     <script src="js/jquery-2.2.1.js"></script>
+    <script src="js/jquery-ui.js"></script>
     <script src="js/pactometro.js"></script>
 </head>
 <body>
